--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -303,15 +303,14 @@
 
   .project-overlay-photo {
     width: 100%;
-    height: 35%;
     min-height: 35%;
   }
 
   .project-overlay-description {
     padding: 1rem;
     width: 100%;
-    height: 65%;
-    max-height: 65%;
+    min-height: 65%;
+    //max-height: 65%;
 
     p {
       font-size: 0.8rem;
